--- a/audio_common_msgs/CMakeLists.txt
+++ b/audio_common_msgs/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(audio_common_msgs)
 
-find_package(catkin REQUIRED COMPONENTS message_generation)
+find_package(catkin REQUIRED COMPONENTS std_msgs message_generation)
 add_message_files(DIRECTORY msg FILES AudioData.msg)
-generate_messages()
+add_message_files(DIRECTORY msg FILES AudioDataStamped.msg)
+generate_messages(DEPENDENCIES std_msgs)
 
-catkin_package(CATKIN_DEPENDS message_runtime)
+catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
