store more format details

--- a/audio_common_msgs/CMakeLists.txt
+++ b/audio_common_msgs/CMakeLists.txt
@@ -5,6 +5,7 @@ project(audio_common_msgs)
 find_package(catkin REQUIRED COMPONENTS std_msgs message_generation)
 add_message_files(DIRECTORY msg FILES AudioData.msg)
 add_message_files(DIRECTORY msg FILES AudioDataStamped.msg)
+add_message_files(DIRECTORY msg FILES AudioFormat.msg)
 generate_messages(DEPENDENCIES std_msgs)
 
 catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
