--- a/audio_capture/package.xml
+++ b/audio_capture/package.xml
@@ -17,11 +17,13 @@
 
    <build_depend>roscpp</build_depend>
    <build_depend>audio_common_msgs</build_depend>
+   <build_depend>diagnostic_updater</build_depend>
    <build_depend>libgstreamer1.0-dev</build_depend>
    <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
 
    <run_depend>roscpp</run_depend>
    <run_depend>audio_common_msgs</run_depend>
+   <run_depend>diagnostic_updater</run_depend>
    <run_depend>gstreamer1.0</run_depend>
    <run_depend>gstreamer1.0-plugins-base</run_depend>
    <run_depend>gstreamer1.0-plugins-good</run_depend>
