--- a/audio_play/CMakeLists.txt
+++ b/audio_play/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
-
-
 project(audio_play)
+
+add_compile_options(-std=c++11 -g -Wall)
+
 
 find_package(catkin REQUIRED COMPONENTS roscpp audio_common_msgs)
 
